# project

./: .gitignore  CMakeLists.txt  PROJECT_config.h.in  README.md  conanfile.txt  config.txt  main.cpp  setup.txt
AccountParsers/: usaa.h
FileRetriever/: FileRetriever.cpp  FileRetriever.h
Planning/: Description.txt  TransactionSchema.txt  diagram.uxf
csv/: functions.h
src/: PROJECT_config.h
src/AccountParsers/: AccountParser.h  usaa.cpp
src/FileRetriever/: FileRetriever.cpp
tests/: UsaaTest.cpp
